--- a/The_Battle_of_Neighborhoods.ipynb
+++ b/The_Battle_of_Neighborhoods.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "The Battle of Neighborhoods.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyOYZboS04dVWRw9cTKL300w",
       "include_colab_link": true
     },
